# architect_cmu

./: .gitignore  AudioWorker.cpp  AudioWorker.h  Bph.cpp  Bph.h  CMakeLists.txt  Detector.cpp  Info.plist.in  LinuxAudio.cpp  LinuxAudio.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  PerfInstrumentation.cpp  PerfInstrumentation.h  PlaybackWorker.cpp  PlaybackWorker.h  README.md  RollingAverage.cpp  RollingAverage.h  RollingLeastSquares.cpp  RollingLeastSquares.h  SharedAudio.h  SimWorker.cpp  SimWorker.h  SoundImageRenderer.cpp  SoundImageRenderer.h  SoundImageWidget.cpp  SoundImageWidget.h  Splash.qrc  Timegrapher.cpp  WavStreamWriter.cpp  WaveHeader.h  WindowsAudio.cpp  WindowsAudio.h  build_run.sh  qcustomplot.cpp
Documents/: SPRINT_PLAN.md
Documents/diagrams/: layered-architecture-from-image.drawio  module-view-as-is.drawio
Keep/: Info.txt
TimeGrapher/: AudioWorker.cpp  AudioWorker.h  CMakeLists.txt  Detector.h  Dsp.cpp  Dsp.h  LinuxAudio.cpp  LinuxAudio.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  MfccExtractor.cpp  MfccExtractor.h  PlaybackWorker.cpp  PlaybackWorker.h  RollingAverage.cpp  RollingAverage.h  RollingLeastSquares.cpp  RollingLeastSquares.h  SharedAudio.h  SimWorker.cpp  SimWorker.h  SoundImageWidget.cpp  SoundImageWidget.h  Splash.qrc  TfliteConfig.h.in  TfliteRunner.cpp  TfliteRunner.h  Timegrapher.h  WatchSynthStream.cpp  WatchSynthStream.h  WavStreamWriter.h  WaveHeader.h  WindowsAudio.cpp  WindowsAudio.h  qcustomplot.cpp
TimeGrapher/Documents/: TimeGrapher Equations_v1.docx
TimeGrapher/Keep/: Info.txt
TimeGrapher/TinyML/: inference.py  input.raw  mfcc_cnn.tflite  mfcc_cnn_int8.tflite  requirements.txt  tinyml.py
docs/: INSTRUMENTATION_PLAN.md  PERF_CODE_MAP.md  PERF_MEASUREMENT_OVERVIEW.md  PERF_VERIFICATION_GUIDE.md  PI_MEASUREMENT_CHECKLIST.md  perf_pipeline.dot
docs/en/: AutomatedAnalysis.md  CodeAnalysis.md  INSTRUMENTATION_PLAN.md  PERF_ANALYSIS.md  PERF_ANALYSIS_TOOLS.md  PERF_CODE_MAP.md  PERF_LOG_GUIDE.md  PERF_MEASUREMENT_OVERVIEW.md  PERF_VERIFICATION_GUIDE.md  PI_MEASUREMENT_CHECKLIST.md  README.md  SequenceDiagrams.md  perf_pipeline.dot  perf_timers.dot
docs/en/clang-uml/: class_gui.mmd  seq_process_samples.mmd
docs/ko/: AutomatedAnalysis.md  CodeAnalysis.md  INSTRUMENTATION_PLAN.md  PERF_ANALYSIS.md  PERF_ANALYSIS_TOOLS.md  PERF_CODE_MAP.md  PERF_LOG_GUIDE.md  PERF_MEASUREMENT_OVERVIEW.md  PERF_VERIFICATION_GUIDE.md  PI_MEASUREMENT_CHECKLIST.md  README.md  SequenceDiagrams.md  perf_pipeline.dot  perf_timers.dot
docs/ko/clang-uml/: seq_start_button.mmd
scripts/: arecord_test.sh
tools/: analyze_perf.py  perf_join.py  resource_sample.ps1  resource_sample.sh  verify_measurement.sh
